# kyraim

./: .gitignore  README.md  c_decode.py  c_encode.py  cps_read.py  csh_patch.py  csh_read.py  emc_composer.py  emc_parser.py  pakfile.py  pakfile_writer.py  pakfile_writer.sizes.py  pyproject.toml  read_asis.py  read_dlg.py  vrm.py  write_asis.py  write_dlg.py  wsa_read.py  wsa_write.py
kyrafont/: image.py  image_reader.py  kyrafnt.1.py  kyrafnt.py  kyraread.py
kyraim/: cps.py  texts.py  wsa.py
kyraim/archive/: base.py  installer.py  pakfile.py  pakfile_writer.py  pakfile_writer.sizes.py
kyraim/codex/: base.py  lcw.py  xor_delta.py
kyraim/codex/texts/: asis.py  ccode.py  dlg.py  emc.py  tre.py
kyraim/moved/: cps_read.py  csh_patch.py  csh_read.py  wsa_read.py  wsa_write.py
kyraim/moved/kyrafont/: .gitignore  image.py  image_reader.py  kyrafnt.py  kyraread.py
