[tool.poetry]
name = "kyraim"
version = "0.1.0"
description = ""
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
typing-extensions = "^4.3.0"
numpy = "^1.23.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
mypy = "^0.971"
types-Pillow = "^9.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
